tests/idris2/basic049/expected
1/1: Building Fld (Fld.idr)
Warning: We are about to implicitly bind the following lowercase names.
You may be unintentionally shadowing the associated global definitions:
  a is shadowing Main.R1.R1.a
Warning: We are about to implicitly bind the following lowercase names.
You may be unintentionally shadowing the associated global definitions:
  a is shadowing Main.R2.R2.a, Main.R1.R1.a
Warning: We are about to implicitly bind the following lowercase names.
You may be unintentionally shadowing the associated global definitions:
  a is shadowing Main.R2.R2.a, Main.R1.R1.a
Warning: We are about to implicitly bind the following lowercase names.
You may be unintentionally shadowing the associated global definitions:
  a is shadowing Main.R2.R2.a, Main.R1.R1.a
Warning: We are about to implicitly bind the following lowercase names.
You may be unintentionally shadowing the associated global definitions:
  a is shadowing Main.R2.R2.a, Main.R1.R1.a
Warning: We are about to implicitly bind the following lowercase names.
You may be unintentionally shadowing the associated global definitions:
  a is shadowing Main.R2.R2.a, Main.R1.R1.a
Warning: We are about to implicitly bind the following lowercase names.
You may be unintentionally shadowing the associated global definitions:
  a is shadowing Main.R2.R2.a, Main.R1.R1.a
  b is shadowing Main.Other.b
Warning: We are about to implicitly bind the following lowercase names.
You may be unintentionally shadowing the associated global definitions:
  a is shadowing Main.R2.R2.a, Main.R1.R1.a
  b is shadowing Main.Other.b
Warning: We are about to implicitly bind the following lowercase names.
You may be unintentionally shadowing the associated global definitions:
  a is shadowing Main.R2.R2.a, Main.R1.R1.a
Warning: We are about to implicitly bind the following lowercase names.
You may be unintentionally shadowing the associated global definitions:
  a is shadowing Main.R2.R2.a, Main.R1.R1.a
Warning: We are about to implicitly bind the following lowercase names.
You may be unintentionally shadowing the associated global definitions:
  a is shadowing Main.R2.R2.a, Main.R1.R1.a
Warning: We are about to implicitly bind the following lowercase names.
You may be unintentionally shadowing the associated global definitions:
  a is shadowing Main.R2.R2.a, Main.R1.R1.a
Warning: We are about to implicitly bind the following lowercase names.
You may be unintentionally shadowing the associated global definitions:
  a is shadowing Main.R2.R2.a, Main.R1.R1.a
Error: While processing right hand side of r2_shouldNotTypecheck1. Ambiguous elaboration. Possible results:
    Main.R2.MkR
    Main.R1.MkR Type

Fld:72:26--72:29
 68 | r1 : R1 -- explicit fields access
 69 | r1 = MkR {field = "string"}
 70 | 
 71 | r2_shouldNotTypecheck1 : ?
 72 | r2_shouldNotTypecheck1 = MkR {field = the Nat 22} -- fail, impossible to disambiguate
                               ^^^

Main> Main.myDog : OrdinaryDog
Main> Main.mySuperDog : SuperDog
Main> Main.other : Other String
Main> 1 hole: Main.r2_shouldNotTypecheck1 : ?_ [no locals in scope]
Main> Bye for now!
